@@ -186,14 +186,14 @@ class Test_static_view_use_subpath_False(unittest.TestCase):
         from pyramid.httpexceptions import HTTPNotFound
         self.assertRaises(HTTPNotFound, inst, context, request)
 
-    def test_resource_with_content_encoding(self):
+    def test_gz_resource_no_content_encoding(self):
         inst = self._makeOne('pyramid.tests:fixtures/static')
         request = self._makeRequest({'PATH_INFO':'/arcs.svg.tgz'})
         context = DummyContext()
         response = inst(context, request)
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(response.content_type, 'application/x-tar')
-        self.assertEqual(response.content_encoding, 'gzip')
+        self.assertEqual(response.content_encoding, None)
         response.app_iter.close()
 
     def test_resource_no_content_encoding(self):
