@@ -97,6 +97,11 @@ Bug Fixes
   from previous orders have executed.
   See https://github.com/Pylons/pyramid/pull/2757
 
+- Fix static view to avoid setting the ``Content-Encoding`` response header
+  to an encoding guessed using Python's ``mimetypes`` module.
+  This was causing clients to decode the content of gzipped files
+  when downloading them.
+
 Deprecations
 ------------
 
